--- a/:).html
+++ b/:).html
@@ -1,7 +1,12 @@
 <html>
   <head>
-    <title>Site do 1A</title>
+    <title>juiice é demais</title>
   </head>
+  <style>
+    body{
+      backgroung-color:pink:
+    }
+    /style>
   <body>
     <fildset>
       <legend>CADASTRAR:</legend>
