--- a/:).html
+++ b/:).html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <title>pinkroses</title>
+    <title>CorpseGirl</title>
   </head>
   <style>
-    body{
-      backgroung-color:pink:
-    }
-    /style>
+      body{
+        background-color:#fee8f8;
+      }
+    </style>
   <body>
     <fildset>
       <legend>CADASTRAR:</legend>
-      <input type="text" placeholder="usuario">
+      <input type="text" placeholder="name">
     </fildset>
   </body>
 </html>
