--- a/:).html
+++ b/:).html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CorpseGirl</title>
+    <title>Juice</title>
   </head>
   <style>
       body{
@@ -10,7 +10,7 @@
   <body>
     <fildset>
       <legend>CADASTRAR:</legend>
-      <input type="text" placeholder="name">
+      <p>USUARIO:</p><input type="text" placeholder="nome"><br>
     </fildset>
   </body>
 </html>
