--- a/:).html
+++ b/:).html
@@ -10,7 +10,13 @@
   <body>
     <fildset>
       <legend>CADASTRAR:</legend>
-      <p>USUARIO:</p><input type="text" placeholder="nome"><br>
+      <p>Usuario:</p><input type="text" placeholder="usuario"><br>
+      <p>Senha/p></p><input type="password" placeholder="senha"><br>
+      <select>
+        <option>A</option>
+        <option>B</option>
+        <option>C</option>
+      <bottom>Cadastrar</bottom>
     </fildset>
   </body>
 </html>
