--- a/:).html
+++ b/:).html
@@ -4,7 +4,7 @@
   </head>
   <style>
       body{
-        background-color:#fee8f8;
+        background-color:#fedef4;
       }
     </style>
   <body>
