--- a/:).html
+++ b/:).html
@@ -11,7 +11,7 @@
     <fildset>
       <legend>CADASTRAR:</legend>
       <p>Usuario:</p><input type="text" placeholder="usuario"><br>
-      <p>Senha/p></p><input type="password" placeholder="senha"><br>
+      <p>Senha</p><input type="password" placeholder="senha"><br>
       <select>
         <option>A</option>
         <option>B</option>
