--- a/:).html
+++ b/:).html
@@ -5,6 +5,8 @@
   <style>
       body{
         background-color:#fedef4;
+        color:#fedef8;
+        font-family:FreeMono;
       }
     </style>
   <body>
