--- a/:).html
+++ b/:).html
@@ -5,7 +5,7 @@
   <style>
       body{
         background-color:#fedef4;
-        color:#fedef8;
+        color:#00FF00;
         font-family:FreeMono;
       }
     </style>
