--- a/:).html
+++ b/:).html
@@ -5,7 +5,7 @@
   <style>
       body{
         background-color:#fedef4;
-        color:#00FF00;
+        color:#000000;
         font-family:FreeMono;
       }
     </style>
@@ -20,6 +20,8 @@
         <option>C</option>
       <bottom>Cadastrar</bottom>
     </fildset>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
   </body>
 </html>
