--- a/:).html
+++ b/:).html
@@ -4,7 +4,7 @@
   </head>
   <style>
       body{
-        background-color:#fedef4;
+        background-image:url("https://angimg.anghcdn.co/presets/shareables?artist=Jazmin+Bean&song=+&lang=en&coverartid=136181622&type=artist&cache=16")
         color:#000000;
         font-family:FreeMono;
       }
@@ -20,8 +20,5 @@
         <option>C</option>
       <bottom>Cadastrar</bottom>
     </fildset>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIoWyWU8fwf3I3bJVrtQsZfKNveqUK7m4eg&usqp=CAU">
   </body>
 </html>
