--- a/:).html
+++ b/:).html
@@ -4,7 +4,7 @@
   </head>
   <style>
       body{
-        background-image:url("https://angimg.anghcdn.co/presets/shareables?artist=Jazmin+Bean&song=+&lang=en&coverartid=136181622&type=artist&cache=16.jpg")
+        background-image:url("https://angimg.anghcdn.co/presets/shareables?artist=Jazmin+Bean&song=+&lang=en&coverartid=136181622&type=artist&cache=16.jpg");
         color:#000000;
         font-family:FreeMono;
       }
