--- a/:).html
+++ b/:).html
@@ -4,7 +4,7 @@
   </head>
   <style>
       body{
-        background-image:url("https://angimg.anghcdn.co/presets/shareables?artist=Jazmin+Bean&song=+&lang=en&coverartid=136181622&type=artist&cache=16.jpg");
+        background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU.jpg");
         color:#000000;
         font-family:FreeMono;
       }
