--- a/:).html
+++ b/:).html
@@ -5,6 +5,7 @@
   <style>
       body{
         background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU.jpg");
+        repeat:no-repeat;
         color:#000000;
         font-family:FreeMono;
       }
