--- a/:).html
+++ b/:).html
@@ -4,7 +4,7 @@
   </head>
   <style>
       body{
-        background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU.jpg");
+        background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtglWpfdLx3QSyr7xCyi2BHgBR1hwdMytZHFhj1CzJ_XeHGgQYTriZEoNIop-3q37AJ-U&usqp=CAU.jpg");
         backgroung-repeat: no-repeat;
         color:#000000;
         font-family:FreeMono;
@@ -21,5 +21,6 @@
         <option>C</option>
       <bottom>Cadastrar</bottom>
     </fildset>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU.jpg">
   </body>
 </html>
