--- a/:).html
+++ b/:).html
@@ -21,6 +21,6 @@
         <option>C</option>
       <bottom>Cadastrar</bottom>
     </fildset>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU.jpg">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3RkrrYFmh5YpJPvQDM_cU1-CSvOEsxwgNnm37dNodh0DgfxK6M1ddrcD16cgOVPP_R10&usqp=CAU">
   </body>
 </html>
