--- a/:).html
+++ b/:).html
@@ -5,7 +5,7 @@
   <style>
       body{
         background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtglWpfdLx3QSyr7xCyi2BHgBR1hwdMytZHFhj1CzJ_XeHGgQYTriZEoNIop-3q37AJ-U&usqp=CAU.jpg");
-        repeat: no-repeat;
+        background-repeat: no-repeat;
         color:#000000;
         font-family:FreeMono;
       }
